# booster_school

./: pyproject.toml
app_articles/: models.py
app_articles/migrations/: 0001_initial.py
app_courses/migrations/: 0001_initial.py
app_events/migrations/: 0001_initial.py
app_miscellaneous/migrations/: 0001_initial.py
config/: settings.py
